security-service-poc/security-service/deploy/keycloak-ingress-access-https/deploy-all.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/auth"
      route:
        - destination:
            port:
              number: 80
            host: keycloak
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: security-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/security"
      route:
        - destination:
            port:
              number: 8080
            host: security-service-svc
---
apiVersion: v1
kind: Service
metadata:
  name: security-service-svc
  labels:
    app: security-service-lbl
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: security-service-lbl
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-service-dpl
  labels:
    app: security-service-lbl
spec:
  selector:
    matchLabels:
      app: security-service-lbl
  replicas: 1
  template:
    metadata:
      labels:
        app: security-service-lbl
    spec:
      containers:
        - name: security-service
          image: shpboris/security-service
          ports:
            - containerPort: 8080
